--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                             <p class="info-text text-sm">
                                 Centro Médico El Valle, Planta Baja,<br>
                                 Consultorio 5, Av. Rafael Tovar,<br>
-                                El Valle Del Espíritu Santo<br>
+                                El Valle del Espíritu Santo,<br>
                                 Nueva Esparta - Venezuela 6308
                             </p>
                         </div>
@@ -615,7 +615,7 @@
 
             <div class="text-center text-white text-opacity-60 text-sm">
                 <p>© <span id="current-year"></span> Dra. Hanoi Yánez González.<br>Todos los derechos reservados.</p>
-                <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5<br>Av. Rafael Tovar, El Valle del Espíritu Santo,<br>Nueva Esparta<br>Venezuela 6308</p>
+                <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5,<br>Av. Rafael Tovar, El Valle del Espíritu Santo,<br>Nueva Esparta - Venezuela 6308</p>
             </div>
         </div>
     </footer>
