--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                 <div class="md:w-1/2">
                     <h2 class="text-3xl md:text-4xl font-bold mb-6 gradient-text">Sobre mí</h2>
                     <p class="mb-4 text-lg text-gray-700">
-                        Soy Hanoi Yánez González, médico especialista en Obstetricia y Ginecología, egresada de la Universidad Central de Venezuela (UCV) y con diplomado en Ginecología Infanto-Juvenil.
+                        Soy Hanoi Yánez González, médico especialista en Obstetricia y Ginecología, egresada de la Universidad Central de Venezuela (UCV) y con diplomado en Ginecología Infanto-Juvenil, lo que me permite ofrecer una atención personalizada, incluso desde las etapas más tempranas.
                     </p>
                     <p class="mb-4 text-lg text-gray-700">
-                        Como venezolana y amante del yoga, mi enfoque médico es holístico, centrado en el bienestar integral de mis pacientes. Mi filosofía se basa en entender que cada mujer es única y merece una atención personalizada.
+                        Mi enfoque médico es holístico, centrado en el bienestar integral de mis pacientes. Esta perspectiva se nutre de mi interés en prácticas que promueven el equilibrio mente-cuerpo, como el yoga, y mi compromiso como médico venezolana. Mi filosofía se basa en entender que cada mujer es única y merece un cuidado adaptado a sus necesidades.
                     </p>
                     <p class="mb-6 text-lg text-gray-700">
-                        Mi consulta ofrece atención personalizada y aborda aspectos ginecológicos, reproductivos, nutricionales, emocionales y afectivos. Mi objetivo es educar sobre promoción de salud y prevención de enfermedades, acompañando en el proceso de embarazo y en la búsqueda de un estilo de vida saludable.
+                        En mi consulta, este enfoque individualizado abarca aspectos ginecológicos, reproductivos, nutricionales, emocionales y afectivos. Mi objetivo es educar sobre promoción de salud y prevención de enfermedades, fomentando la autogestión del bienestar como parte clave de esta visión integral. Además, te acompaño en etapas clave como el embarazo y en la búsqueda de un estilo de vida que promueva un bienestar integral y duradero.
                     </p>
                     <div class="flex flex-wrap gap-4 mt-8">
                         <div class="badge">
@@ -478,10 +478,7 @@
                         <div class="contact-info-item">
                             <h4 class="info-title"><i class="fas fa-map-marker-alt info-icon"></i>Ubicación</h4>
                             <p class="info-text text-sm">
-                                Centro Médico El Valle, Planta Baja,<br>
-                                Consultorio 5, Av. Rafael Tovar,<br>
-                                El Valle del Espíritu Santo,<br>
-                                Nueva Esparta - Venezuela 6308
+                                Centro Médico El Valle, Planta Baja,<br> Consultorio 5, Av. Rafael Tovar,<br> El Valle Del Espíritu Santo<br> Nueva Esparta - Venezuela 6308
                             </p>
                         </div>
 
@@ -615,7 +612,7 @@
 
             <div class="text-center text-white text-opacity-60 text-sm">
                 <p>© <span id="current-year"></span> Dra. Hanoi Yánez González.<br>Todos los derechos reservados.</p>
-                <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5,<br>Av. Rafael Tovar, El Valle del Espíritu Santo,<br>Nueva Esparta - Venezuela 6308</p>
+                <p class="mt-2">Centro Médico El Valle, Planta Baja, Consultorio 5<br>Av. Rafael Tovar, El Valle Del Espíritu Santo<br>Nueva Esparta<br>Venezuela 6308</p>
             </div>
         </div>
     </footer>
