--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                         <h3 class="text-2xl font-bold mb-6">Envíame un mensaje</h3>
 
                         <input type="hidden" name="_subject" value="Nuevo Mensaje desde dra.hanoi.online!">
-                        <input type="text" name="_honey" style="display:none"> <div class="mb-5">
+                        <div class="mb-5">
                             <label for="name" class="form-label">Nombre completo</label>
                             <input type="text" id="name" name="name" class="form-input" required>
                         </div>
